--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>My first web page</h1>
-    <h2>Written with the guidance of Moringa Prep</h2>
+    <h2>Written with the <strong>guidance</strong> of <em>Moringa Prep</em></h2>
 
     <p>This is my first webpage!</p>
     <p>Isn't it nice?</p>
